--- a/index.html
+++ b/index.html
@@ -10,46 +10,53 @@
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" 
     crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./src/all.css">
     <link rel="stylesheet" href="./src/style.css">
+    
 </head>
 <body>
     <header>
-        <nav >
-            <div class="ham-menu">
-                <i class="fa-regular fa-bars fa-3x"></i>
-            </div>
-            <div class="home"><i class="fa-light fa-user fa-3x" style="color:#51BB84 ;"></i></div>
-            <div class="projects"><i class="fa-light fa-file-code fa-3x" style="color:#51BB84 ;"></i></div>
-            <div class="contact-me"><i class="fa-light fa-phone fa-3x" style="color:#51BB84 ;"></i></div>
+        <div class="ham-menu">
+        <div class="ham-butt">
+            <div class="top-bar"></div>
+            <div class="middle-bar"></div>
+            <div class="bottom-bar"></div>
+        </div>
+            
+        </div>
+        <nav class="nav">
+            <div><i class="fa-thin fa-user fa-3x" style="color:#51BB84;padding:0 0.7rem 1.5rem 0;"></i></div>
+            <div class="projects"><i class="fa-thin fa-file-code fa-3x" style="color:#51BB84;padding:0 0.7rem 1.5rem 0;"></i></div>
+            <div class="contact-me"><i class="fa-thin fa-phone fa-3x" style="color:#51BB84;padding:0 0.6rem 1.5rem 0;"></i></div>
         </nav>
     </header>
 
     <!-- main page -->
-    <div class="img">
-        <h2 style="font-size:1.5rem;padding-bottom: 1.5rem;">Developer</h2>
-        <h1  style="font-size:3rem;font-weight:bold;padding:0 1rem 0.5rem 1rem;">Soroush Choghadaki</h1>
-    </div>
-    <div class="container">
-        <div>
-            <h1 style="font-weight: bold;font-size: 3rem;">about me</h1>
-            <h3 style="color:#51BB84;font-weight: bold;padding: 0.5rem 0;"> 22 years old <span style="padding:0 0.5rem ;"> / </span>Karaj<span style="padding:0 0.5rem ;"> / </span>freelancer</h3>
-            <p style="max-width: 100%;padding-top: 1.5rem;line-height: normal;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat repellendus, recusandae sint cupiditate praesentium nemo nulla voluptatibus vitae mollitia eos harum, dicta quam. 
-                Facere quasi laudantium libero similique porro. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, sed tenetur magni amet sit vitae eligendi nisi velit dolores, reiciendis tempore fugit molestiae itaque saepe neque nam atque molestias! Temporibus.
-            </p>
+    <div style="display:flex;">
+        <div class="img">
+            <h2 style="font-size:1.5rem;padding-bottom: 1.5rem;">Developer</h2>
+            <h1  style="font-size:3rem;font-weight:bold;padding:0 1rem 0.5rem 1rem;text-align: center;">Soroush Choghadaki</h1>
         </div>
-        <hr class="hr">
-        <div class="category">
-            <h1 style="font-weight:bold;font-size:2.3rem;">My services</h1>
-            <div class="container-catg">
-                <div class="itemes"></div>
-                <div class="itemes"></div>
-                <div class="itemes"></div>
-                <div class="itemes"></div>
+        <div class="container">
+            <div>
+                <h1 style="font-weight: bold;font-size: 3rem;">about me</h1>
+                <h3 style="color:#51BB84;font-weight: bold;padding: 0.5rem 0;"> 22 years old <span style="padding:0 0.5rem ;"> / </span>Karaj<span style="padding:0 0.5rem ;"> / </span>freelancer</h3>
+                <p style="max-width: 100%;padding-top: 1.5rem;line-height: normal;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat repellendus, recusandae sint cupiditate praesentium nemo nulla voluptatibus vitae mollitia eos harum, dicta quam. 
+                    Facere quasi laudantium libero similique porro. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, sed tenetur magni amet sit vitae eligendi nisi velit dolores, reiciendis tempore fugit molestiae itaque saepe neque nam atque molestias! Temporibus.
+                </p>
+            </div>
+            <hr class="hr">
+            <div class="category">
+                <h1 style="font-weight:bold;font-size:2.3rem;">My abilities</h1>
+                <div class="container-catg">
+                    <div class="itemes"></div>
+                    <div class="itemes"></div>
+                    <div class="itemes"></div>
+                    <div class="itemes"></div>
+                </div>
             </div>
         </div>
     </div>
-
-
-    <script src="https://kit.fontawesome.com/8a99bf3a37.js" crossorigin="anonymous"></script>
+    <script src="./src/script.js"></script>
 </body>
 </html>
