--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="light">
     <title>portfolio</title>
 
     <link rel="stylesheet" href="./src/css reset.css">
@@ -45,6 +46,9 @@
     </header>
 
     <!-- main page -->
+    <div class="theme_toggle">
+
+    </div>
     <div class="main_container">
         <div class="img">
             <h2 style="font-size:1.5rem;padding-bottom: 1.5rem;">Developer</h2>
@@ -80,7 +84,7 @@
                     <div class="itemes">
                         <i style="color:#51BB84;" class="fa-thin fa-4x fa-comments-question"></i>
                         <h1 style="font-size:1.7rem;font-weight:bold;margin:0.5rem 0;">support</h1>
-                        <p style="line-height: normal; color:darkslategray">theqnical support for customers</p>
+                        <p style="line-height: normal; color:darkslategray">technical support for customers</p>
                     </div>
                 </div>
             </div>
