--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h1  style="font-size:3rem;font-weight:bold;padding:0 1rem 0.5rem 1rem;text-align: center;">Soroush Choghadaki</h1>
         </div>
         <div class="container">
-            <div>
+            <div class="text">
                 <h1 style="font-weight: bold;font-size: 3rem;">about me</h1>
                 <h3 style="color:#51BB84;font-weight: bold;padding: 0.5rem 0;"> 22 years old <span style="padding:0 0.5rem ;"> / </span>Karaj<span style="padding:0 0.5rem ;"> / </span>freelancer</h3>
                 <p style="max-width: 100%;padding-top: 1rem;line-height: 1.4rem; color:darkslategray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat repellendus, recusandae sint cupiditate praesentium nemo nulla voluptatibus vitae mollitia eos harum, dicta quam. 
