--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="color-scheme" content="light">
     <title>portfolio</title>
 
     <link rel="stylesheet" href="./src/css reset.css">
@@ -58,7 +57,7 @@
             <div class="text">
                 <h1 style="font-weight: bold;font-size: 3rem;">about me</h1>
                 <h3 style="color:#51BB84;font-weight: bold;padding: 0.5rem 0;"> 22 years old <span style="padding:0 0.5rem ;"> / </span>Karaj<span style="padding:0 0.5rem ;"> / </span>freelancer</h3>
-                <p style="max-width: 100%;padding-top: 1rem;line-height: 1.4rem; color:darkslategray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat repellendus, recusandae sint cupiditate praesentium nemo nulla voluptatibus vitae mollitia eos harum, dicta quam. 
+                <p  class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat repellendus, recusandae sint cupiditate praesentium nemo nulla voluptatibus vitae mollitia eos harum, dicta quam. 
                     Facere quasi laudantium libero similique porro. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, sed tenetur magni amet sit vitae eligendi nisi velit dolores, reiciendis tempore fugit molestiae itaque saepe neque nam atque molestias! Temporibus.
                 </p>
             </div>
@@ -69,22 +68,22 @@
                     <div class="itemes">
                         <i style="color:#51BB84;" class="fa-thin fa-4x fa-book-open-reader"></i>
                         <h1 style="font-size:1.7rem;font-weight:bold;margin:0.5rem 0;">fast learner</h1>
-                        <p style="line-height: normal; color:darkslategray">everyday learning new methods and upgrading skills</p>
+                        <p class="card_description">everyday learning new methods and upgrading skills</p>
                     </div>
                     <div class="itemes">
                         <i style="color:#51BB84;" class="fa-thin fa-4x fa-display-code"></i>
                         <h1 style="font-size:1.7rem;font-weight:bold;margin:0.5rem 0;">responsive design</h1>
-                        <p style="line-height: normal; color:darkslategray">an smooth responsive design that fits every screens</p>
+                        <p class="card_description">an smooth responsive design that fits every screens</p>
                     </div>
                     <div class="itemes">
                         <i style="color:#51BB84;" class="fa-thin fa-4x fa-people-group"></i>
                         <h1 style="font-size:1.7rem;font-weight:bold;margin:0.5rem 0;">teamwork</h1>
-                        <p style="line-height: normal; color:darkslategray">suitble person for teamworking and good commucation skills</p>
+                        <p class="card_description">suitble person for teamworking and good commucation skills</p>
                     </div>
                     <div class="itemes">
                         <i style="color:#51BB84;" class="fa-thin fa-4x fa-comments-question"></i>
                         <h1 style="font-size:1.7rem;font-weight:bold;margin:0.5rem 0;">support</h1>
-                        <p style="line-height: normal; color:darkslategray">technical support for customers</p>
+                        <p class="card_description">technical support for customers</p>
                     </div>
                 </div>
             </div>
