--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             
         </div>
         <nav class="nav">
-            <ul>
+            <ul class="nav_ul">
                 <li class="home cat">
                     
                     <i class="fa-thin fa-user fa-3x nav_btn" style="color:#51BB84;"></i>
