--- a/index.html
+++ b/index.html
@@ -26,17 +26,16 @@
         </div>
         <nav class="nav">
             <ul class="nav_ul">
-                <li class="home cat">
-                    
-                    <i class="fa-thin fa-user fa-3x nav_btn" style="color:#51BB84;"></i>
+                <li class="home cat active">
+                    <i class="fa-thin fa-user fa-3x nav_btn cat_icon active" ></i>
                     <h1 style="font-size: 1.7rem; margin-right:2.5rem;">about me</h1>
                 </li>
                 <li class="projects_cat cat">
-                    <i class="fa-thin fa-file-code fa-3x nav_btn" style="color:#51BB84;"></i>
+                    <i class="fa-thin fa-file-code fa-3x nav_btn cat_icon" ></i>
                     <h1 style="font-size: 1.7rem; margin-right:2.5rem;">examples</h1>
                 </li>
                 <li class="contact_me cat">
-                    <i class="fa-thin fa-phone fa-3x nav_btn" style="color:#51BB84;"></i>
+                    <i class="fa-thin fa-phone fa-3x nav_btn cat_icon" ></i>
                     <h1 style="font-size: 1.7rem; margin-right:2.5rem;">contact me</h1>
                 </li>
             </ul>
@@ -55,8 +54,8 @@
         </div>
         <div class="container">
             <div class="text">
-                <h1 style="font-weight: bold;font-size: 3rem;">about me</h1>
-                <h3 style="color:#51BB84;font-weight: bold;padding: 0.5rem 0;"> 22 years old <span style="padding:0 0.5rem ;"> / </span>Karaj<span style="padding:0 0.5rem ;"> / </span>freelancer</h3>
+                <h1 class="title_1">about me</h1>
+                <h3 class="subtitle_1"> 22 years old <span style="padding:0 0.5rem ;"> / </span>Karaj<span style="padding:0 0.5rem ;"> / </span>freelancer</h3>
                 <p  class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat repellendus, recusandae sint cupiditate praesentium nemo nulla voluptatibus vitae mollitia eos harum, dicta quam. 
                     Facere quasi laudantium libero similique porro. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, sed tenetur magni amet sit vitae eligendi nisi velit dolores, reiciendis tempore fugit molestiae itaque saepe neque nam atque molestias! Temporibus.
                 </p>
@@ -95,7 +94,7 @@
         <div><img class="img2 hide" src="./src/123.jpg" alt="">
         </div>
         <div class="second_container hide">
-            <h1 style="font-size:2rem;font-weight: bold;padding:1rem 0 1rem 2rem; width: 70%;">projects</h1>
+            <h1 class="title_2">projects</h1>
             <div class="projects">
                 <img style="width: 95%; margin-top: 0.5rem;" src="./src/rating.webp" alt="">
                 <h1 style="font-size:1.5rem; text-align:center; margin-top: 0.7rem; margin: 0.7rem 0.5rem;">Interactive rating component</h1>
@@ -116,7 +115,7 @@
         
     </div>
 
-
+    <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
     <script src="./src/script.js"></script>
 </body>
 </html>
