--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
             <div class="text">
                 <h1 class="title_1">about me</h1>
                 <h3 class="subtitle_1"> 22 years old <span style="padding:0 0.5rem ;"> / </span>Karaj<span style="padding:0 0.5rem ;"> / </span>freelancer</h3>
-                <p  class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat repellendus, recusandae sint cupiditate praesentium nemo nulla voluptatibus vitae mollitia eos harum, dicta quam. 
-                    Facere quasi laudantium libero similique porro. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, sed tenetur magni amet sit vitae eligendi nisi velit dolores, reiciendis tempore fugit molestiae itaque saepe neque nam atque molestias! Temporibus.
+                <p  class="description">Welcome to my page If you are here, it means i have caught your eyes and you are curious to know me! Well then, let me introduce myself: I'm soroush, 22 years old polymer engineering student at SRBIAU (Islamic Azad University Science and Research Branch) university. My passion for computer and coding started when i was a child so i decided to give it a shot Now here i am Designing my first ever site If you want to know me more, feel free to contact me anytime.
                 </p>
             </div>
             <hr class="hr">
@@ -70,12 +69,12 @@
                     <div class="itemes">
                         <i style="color:#51BB84;" class="fa-thin fa-4x fa-display-code"></i>
                         <h1 style="font-size:1.7rem;font-weight:bold;margin:0.5rem 0;">responsive design</h1>
-                        <p class="card_description">an smooth responsive design that fits every screens</p>
+                        <p class="card_description">a smooth responsive design that fits every screen</p>
                     </div>
                     <div class="itemes">
                         <i style="color:#51BB84;" class="fa-thin fa-4x fa-people-group"></i>
                         <h1 style="font-size:1.7rem;font-weight:bold;margin:0.5rem 0;">teamwork</h1>
-                        <p class="card_description">suitble person for teamworking and good commucation skills</p>
+                        <p class="card_description">suitable person for teamwork and good communication skills</p>
                     </div>
                     <div class="itemes">
                         <i style="color:#51BB84;" class="fa-thin fa-4x fa-comments-question"></i>
