--- a/index.html
+++ b/index.html
@@ -132,28 +132,32 @@
                 <li>
                     <div class="social">
                         <a href="https://github.com/soroush1623" target="_blank" style="text-decoration: none !important;color:inherit;" >
-                            <i class="fa fa-github fa-3x"></i>
+                            <i class="fa fa-github fa-2x"></i>
                         </a>
                     </div>
                 </li>
                 <li>
                     <div class="social">
                         <a href="https://t.me/soroush1623" target="_blank" style="text-decoration: none !important;color:inherit;" >
-                            <i class="fa fa-telegram fa-3x"></i>
+                            <i class="fa fa-telegram fa-2x"></i>
                         </a>
                     </div>
                 </li>
                 <li>
                     <div class="social">
                         <a href="https://www.linkedin.com/in/soroush-choghadaki-nejad-a9a1a7193/" target="_blank" style="text-decoration: none !important;color:inherit;" >
-                            <i class="fa fa-linkedin fa-3x"></i>
+                            <i class="fa fa-linkedin fa-2x"></i>
                         </a>
                     </div>
                 </li>
             </ul>
         </div>
-        <div id="map" style="width: 450px; height: 300px; background: #eee; border: 2px solid #aaa; margin: 3rem;"></div>
+        <div id="map"></div>
     </div>
+
+    <footer>
+        <p  class="footer">© 2023 soroush choghadaki</p>
+    </footer>
 
     <script src="https://kit.fontawesome.com/8a99bf3a37.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
